--- a/server/package.json
+++ b/server/package.json
@@ -9,14 +9,12 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "express-fileupload": "^1.2.1",
     "http-errors": "~1.6.3",
     "mongoose": "^6.0.6",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
-  },
-  "devDependencies": {
-    "dotenv": "^10.0.0"
   }
 }
