--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,12 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "chart.js": "^3.6.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.3.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
-    "redux": "^4.1.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
